<resources>
    <string name="app_name">Rekog</string>
    <string name="image_provider">com.app.rekog.provider</string>
    <string name="gallery_name">Test_Face_Images</string>
    <string name="user_name">User Name</string>
    <string name="please_wait">Please wait …</string>
    <string name="enroll">Enroll</string>
    <string name="enter_user_name">Please enter user name.</string>
    <string name="email">Email Address</string>
    <string name="enter_user_email">Please enter email.</string>
    <string name="enter_valid_email">Please enter valid email.</string>

    <string name="not_found">Sorry, AffdexMe requires the use of a front-facing camera, which was not found on your device.</string>
    <string name="affectiva_logo_content_description">Affectiva Logo</string>
    <string name="fps">FPS:</string>
    <string name="loading">Loading&#8230;</string>
    <string name="settings_content_description">Settings</string>

    <string name="insufficient_permissions">Insufficient Permissions</string>
    <string name="permissions_camera_needed_explanation">This app requires the permission to access your camera to be able to gather facial images for processing. No video is saved or used other than for immediate emotion processing.</string>
    <string name="permissions_storage_needed_explanation">This app requires the permission to access your external storage to save screenshots.</string>
    <string name="error">Error</string>
    <string name="understood">Understood</string>
    <string name="retry">Retry</string>

    <!--MetricSelectionFragment strings-->
    <string name="clear_all">Clear All</string>
    <string name="metric_chooser_default_message">0 metrics chosen.</string>
    <string name="choose_six_message">Choose 6 emotions and expressions below to display on the main screen.</string>

    <!--SettingsActivity strings-->
    <string name="select_metrics_title">Select Metrics</string>
    <string name="select_metrics_message">Select emotions and expressions to display.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_message">Change application settings.</string>

    <!--SettingsFragment strings-->
    <string name="set_fps_title">Set Target FPS</string>
    <string name="set_fps_message">Set the desired processed frames per second.</string>
    <string name="fps_edittext_title">Processed Frames Per Second</string>
    <string name="show_tracking_title">Show Tracking Dots</string>
    <string name="show_tracking_message">Display tracking dots and bounding box.</string>
    <string name="show_appearance_title">Show Appearance Indicators</string>
    <string name="show_appearance_message">Display appearance markers adjacent to the bounding box.</string>
    <string name="show_fps_title">Show FPS</string>
    <string name="show_fps_message">Display the actual processed frames per second.</string>
    <string name="show_emoji_title">Show Emoji Indicators</string>
    <string name="show_emoji_message">Display emoji markers adjacent to the bounding box.</string>
    <string name="show_multiface_message">Track multiple people. A beta feature that is CPU intensive, and works only on newer devices.</string>
    <string name="show_multiface_title">Enable Multi-face mode</string>
    <string name="negative">NEGATIVE</string>
    <string name="positive">POSITIVE</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="no_storage_permission">This application cannot run because it does not have the storage permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="upload_images">Upload Images</string>
    <string name="already_enrolled">You are already enrolled</string>
    <string name="please_look_directly_into_the_camera">Please look directly into the camera</string>
    <string name="time">Time</string>
    <string name="attendance_record">Attendance Record</string>


    <!--Rahul Kairos-->
    <string name="kairos_app_id">b9fae3a2</string>
    <string name="kairos_api_key">c630bc8f2f44b5e8bd405fc3ffb03c36</string>

    <!--Bhavya Kairos-->
    <!--<string name="kairos_app_id">c7d15241</string>-->
    <!--<string name="kairos_api_key">fd3287889f836397be1857dd4d0adb11</string>-->
</resources>
