<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="@android:color/white"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_10">

            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_10">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/enroll_user_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/upload_images"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <FrameLayout
            android:id="@+id/images_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/image_view_1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder_470x352" />


                    <ImageView
                        android:id="@+id/image_view_2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder_470x352" />

                    <ImageView
                        android:id="@+id/image_view_3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder_470x352" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_view_4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder_470x352" />

                    <ImageView
                        android:id="@+id/image_view_5"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder_470x352" />

                    <ImageView
                        android:id="@+id/image_view_6"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder_470x352" />

                </LinearLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/enroll_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/enroll"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />


</LinearLayout>