<RelativeLayout android:id="@+id/main_layout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:keepScreenOn="true"
                tools:context=".recognize.RecognizeActivity">

    <SurfaceView
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

    <com.app.rekog.recognize.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            custom:measurements_color="#DDDDDD"
            custom:measurements_lower_spacing="@dimen/measurements_lower_text_spacing"
            custom:measurements_text_border_color="@color/letter_gray"
            custom:measurements_text_border_thickness="@integer/measurements_text_border_thickness"
            custom:measurements_text_size="@dimen/measurements_text_size"
            custom:measurements_upper_spacing="@dimen/measurements_upper_text_spacing" />

    <include
            android:id="@+id/metric_view_group"
            layout="@layout/metric_layout" />

    <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="@dimen/settings_button_size"
            android:layout_height="@dimen/settings_button_size"
            android:layout_alignParentRight="true"
            android:layout_below="@id/metric_view_group"
            android:layout_margin="@dimen/settings_button_margin"
            android:background="@null"
            android:contentDescription="@string/settings_content_description"
            android:onClick="settings_button_click"
            android:scaleType="fitCenter"
            android:src="@drawable/settings_button_selector"
            android:visibility="gone" />

    <ImageButton
            android:id="@+id/camera_button"
            android:layout_width="@dimen/settings_button_size"
            android:layout_height="@dimen/settings_button_size"
            android:layout_alignParentRight="true"
            android:layout_below="@id/settings_button"
            android:layout_margin="@dimen/settings_button_margin"
            android:background="@null"
            android:contentDescription="Switch camera button"
            android:onClick="camera_button_click"
            android:scaleType="fitCenter"
            android:src="@drawable/camera_button_selector" />

    <ImageButton
            android:id="@+id/screenshot_button"
            android:layout_width="@dimen/settings_button_size"
            android:layout_height="@dimen/settings_button_size"
            android:layout_alignParentRight="true"
            android:layout_below="@id/camera_button"
            android:layout_margin="@dimen/settings_button_margin"
            android:background="@null"
            android:contentDescription="Take screenshot"
            android:onClick="takeScreenshot"
            android:scaleType="fitCenter"
            android:src="@drawable/screenshot_button_selector"
            android:visibility="gone" />

    <include layout="@layout/insufficent_permissions_panel" />

    <RelativeLayout
            android:id="@+id/progress_bar_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

        <TextView
                android:id="@+id/please_wait_textview"
                style="@android:style/TextAppearance.Holo.Medium.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/loading"
                android:textSize="@dimen/please_wait_textview_size" />

        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/please_wait_textview_size"
                android:layout_height="@dimen/please_wait_textview_size"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/please_wait_textview"
                android:indeterminate="true"
                android:paddingRight="10dp" />

        <TextView
                android:id="@+id/not_found_textview"
                style="@android:style/TextAppearance.Holo.Medium.Inverse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:gravity="center"
                android:padding="20sp"
                android:text="@string/not_found"
                android:textColor="#CCCCCC"
                android:textSize="20sp"
                android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/bottom_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:visibility="visible">

        <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

        <ImageView
                android:id="@+id/left_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignLeft="@+id/user_name"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/margin_20"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher" />

        <ImageView
                android:id="@+id/right_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@+id/user_name"
                android:layout_marginLeft="@dimen/margin_20"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher" />

        <TextView

                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="#686868"
                android:textSize="18sp"
                android:textStyle="normal" />

    </RelativeLayout>
</RelativeLayout>

